                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 02-03-2005 updated: German language file (Thnx to klapperx)
  - 02-03-2005 updated: Norwegian language file (Thnx to vnm)
  - 02-03-2005 updated: Italian language file (Thnx to kotix)
  - 02-03-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 02-03-2005 updated: Finnish language file (Thnx to jutski)
  - 02-03-2004 updated: Polish language file (Thnx to napek)
  - 02-03-2004 updated: Dutch language file (Thnx to tijmengozer)
  - 01-03-2005 added: Screensaver screenshot ability.
  - 01-03-2005 fixed: Changed Karaoke default delay from 80 to -80 as per SF bug report [1101736].
  - 01-03-2005 added: Patches [1153934] and [1153884] thanks to MrC.
  - 01-03-2005 fixed: flashing screen when viewing pictures
  - 28-02-2005 changed: some gui rendering optimization
  - 28-02-2005 added: More DirectX exports for screensavers, thanks to SiW + MrC
  - 28-02-2005 fixed: Kai window showed incorrect image in Friends view.
  - 28-02-2005 fixed: Possible crash bug when dialog in Fullscreen video is closed.
  - 28-02-2005 fixed: 100k or so memleak in Settings screens.
  - 27-02-2005 fixed: switching between list/thumbs/bigthumbs in Music->Nav root window (& corrected date for the last few items added today to this changelog!)
  - 27-02-2005 change: Use alternate mplayer location now means old mplayer.dll location, and not setting it means new mplayer.dll
                       Remember to verify your settings to make sure you are using the proper dll (ie for most disable Use alternate mplayer location)
  - 27-02-2005 update: mplayer.dll to current cvs version. (final flac fix + realvideo 10 fix)