@@ -110,7 +110,8 @@ public:
 		GUICONTROL_CONSOLE,
 		GUICONTROL_EDIT,
 		GUICONTROL_INFOIMAGE,
-		GUICONTROL_INFOLABEL
+		GUICONTROL_INFOLABEL,
+    GUICONTROL_INFOFADELABEL
 	};
 	GUICONTROLTYPES GetControlType() const { return ControlType; }
 
