@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 02-03-2005 added: new infofadelabel control.  Works like infolabel, except you can have multiple <info> tags.  See the PM MusicOverlay.xml files for an example.
   - 02-03-2005 updated: German language file (Thnx to klapperx)
   - 02-03-2005 updated: Norwegian language file (Thnx to vnm)
   - 02-03-2005 updated: Italian language file (Thnx to kotix)
